@@ -1,3 +1,10 @@
+2009-06-23 18:22-EDT Gregory John Casamento <greg.casamento@gmail.com>
+
+	* Framework/PCProject.m
+	* Framework/PCProjectManager.m
+	* Headers/ProjectCenter/PCProjectManager.h
+	* PCAppController.m: Correct issues with project bundle loading.
+
 2009-05-19 17:13-EDT Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Resources/Info-gnustep.plist: Added PCProjectFileType to the
